完成智谱AI全模型支持和API密钥配置优化
 新功能:
- 支持所有智谱AI模型 (GLM-4.7, GLM-4.6, GLM-4.5-Flash, GLM-4.6V, GLM-4-Voice)
- 智能路由系统自动选择最优模型
- 环境变量自动配置API密钥
- 完整的多模态支持 (文本、图像、语音)

 技术优化:
- 修复GLM-4-Voice模型消息格式问题
- 优化API代理服务器响应处理
- 完善错误处理和回退机制
- 更新Vite配置支持环境变量

 配置改进:
- 统一环境变量管理 (.env.development, .env.production)
- 简化用户配置流程 (无需手动输入API密钥)
- 完善部署配置 (vercel.json, DEPLOYMENT_GUIDE.md)
- 清理无用文件和调试代码

 用户体验:
- 一键启动即可使用所有AI功能
- 智能模型选择提升响应质量
- 完整的客服对话体验
- 支持QR码扫描直接使用

 测试验证:
- 所有5个智谱AI模型测试通过
- API连接稳定可靠
- 前后端代理正常工作
- 生产环境部署就绪

--- a/test-zhipu-api.html
+++ b/test-zhipu-api.html
@@ -218,6 +218,9 @@
             const savedApiKey = localStorage.getItem('zhipuApiKey');
             if (savedApiKey) {
                 document.getElementById('apiKey').value = savedApiKey;
+            } else {
+                // 使用提供的真实API密钥进行测试
+                document.getElementById('apiKey').value = 'a75d46768b0f45dc90a5969077ffc8d9.dT0t2tku3hZGfYkk';
             }
         };
     </script>
